// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`return creates a disptach object 1`] = `
Object {
  "increment": [Function],
  "sideMenu": Object {
    "child": Object {
      "toggle": [Function],
    },
    "increment": [Function],
    "toggle": [Function],
  },
}
`;

exports[`return keeps the initial state 1`] = `
Object {
  "count": 0,
  "sideMenu": Object {
    "child": Object {
      "isExpanded": false,
    },
    "isOpen": false,
    "maxItems": 100,
  },
}
`;

exports[`store argument throws an error when no action is passed 1`] = `[Error: State, action or reducer are not an object]`;

exports[`store argument throws an error when no object is passed 1`] = `undefined`;

exports[`store argument throws an error when no reducer is passed 1`] = `[Error: State, action or reducer are not an object]`;

exports[`store argument throws an error when no state is passed 1`] = `[Error: State, action or reducer are not an object]`;
